<resources>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="window_title">Window %1$d</string>
    <string name="service_notify_text">Terminal session is running</string>
    <string name="process_exit_message">Terminal session finished. Press Enter to close.</string>
    <string name="window_list"          >Windows</string>
    <string name="toggle_soft_keyboard" >Toggle soft keyboard</string>
    <string name="special_keys"         >Special keys</string>
    <string name="reset"                >Reset term</string>
    <string name="send_email"           >Email to</string>
    <string name="enable_wakelock"      >Take WakeLock</string>
    <string name="disable_wakelock"     >Drop WakeLock</string>
    <string name="enable_wifilock"      >Take WifiLock</string>
    <string name="disable_wifilock"     >Drop WifiLock</string>
    <string name="preferences"          >Settings</string>
    <string name="help"                 >Help</string>
    <string name="control_key_dialog_title">Control and Function Keys</string>
    <string name="control_key_dialog_control_text">Control keys:\nCtrl+Space : Control-@ (NUL)\nCtrl+A..Z : Control-A..Z\nCtrl+1 : Ctrl+[ (ESC)\nCtrl+2 : Ctrl+\\\nCtrl+3 : Ctrl+]\nCtrl+4 : Ctrl+^\nCtrl+5 : Ctrl+_</string>
    <string name="control_key_dialog_control_mapping">Ctrl is also mapped to CTRLKEY.\n</string>
    <string name="control_key_dialog_fn_text">Function keys:\nFn+Q : Home\nFn+W : Up\nFn+E : End\nFn+R : PageUp\nFn+A : Left\nFn+S : Down\nFn+D : Right\nFn+F : PageDown\n\nFn+T : Tab\nFn+I : Insert\nFn+X : Delete\n\nFn+1..9 : F1..F9\nFn+0 : F10\nFn+O : F11\nFn+P : F12</string>
    <string name="control_key_dialog_fn_mapping">Fn is also mapped to FNKEY.</string>
    <string name="reset_toast_notification">This window\'s terminal state has been reset.</string>
    <string name="email_transcript_subject">Transcript from Terminal Emulator for Android</string>
    <string name="email_transcript_chooser_title">Mail transcript using:</string>
    <string name="email_transcript_no_email_activity_found">Could not choose an email activity to send transcript.</string>
    <string name="title_activity_help">TTerm Help</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_actionbar_preference">Action bar</string>
    <string name="summary_actionbar_preference">Choose the action bar\'s behavior (Android 3.0 and up).</string>
    <string name="dialog_title_actionbar_preference">Action bar behavior</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose the screen orientation behavior.</string>
    <string name="dialog_title_orientation_preference">Screen orientation behavior</string>
    <string name="text_preferences">Text</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="title_utf8_by_default_preference">Default to UTF-8</string>
    <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>
    <string name="extrakeys_preferences">Extra keys</string>
    <string name="title_extrakeys_string_preference">Extra keys</string>
    <string name="summary_extrakeys_string_preference">Choose extra keys.</string>
    <string name="dialog_title_extrakeys_string_preference">Extra keys</string>
    <string name="title_extrakeys_size_preference">Extra keys\' size</string>
    <string name="summary_extrakeys_size_preference">Choose character height in points.</string>
    <string name="dialog_title_extrakeys_size_preference">Extra keys\' size</string>
    <string name="title_extrakeys_shown_preference">Extra keys shown</string>
    <string name="summary_extrakeys_shown_preference">When to display extra keys.</string>
    <string name="dialog_title_extrakeys_shown_preference">Display extra keys</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_backaction_preference">Back button behavior</string>
    <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
    <string name="dialog_title_backaction_preference">Back button behavior</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
    <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>
    <string name="title_use_keyboard_shortcuts">Use Keyboard Shortcuts</string>
    <string name="use_keyboard_shortcuts_summary_on">Ctrl-Tab: cycle window, Ctrl-Shift-N: new window, Ctrl-Shift-V: paste.</string>
    <string name="use_keyboard_shortcuts_summary_off">Keyboard shortcuts disabled.</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="title_termtype_preference">Terminal type</string>
    <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>
    <string name="title_mouse_tracking_preference">Send mouse events</string>
    <string name="summary_mouse_tracking_preference">Whether tap and scroll events should be sent as escape sequences to the terminal.</string>
    <string name="title_close_window_on_process_exit_preference">Close window on exit</string>
    <string name="summary_close_window_on_process_exit_preference">Whether a window should close when its shell exits.</string>
    <string name="confirm_window_close_message">Close this window?</string>
    <string name="title_verify_path_preference">Verify PATH entries</string>
    <string name="summary_verify_path_preference">Whether inaccessible directories should be removed from the PATH.</string>
    <string name="title_do_path_extensions_preference">Allow PATH extensions</string>
    <string name="summary_do_path_extensions_preference">Whether other apps should be allowed to provide additional commands (add to PATH).</string>
    <string name="title_allow_prepend_path_preference">Allow PATH prepend</string>
    <string name="summary_allow_prepend_path_preference">Whether other apps should be allowed to override existing commands (add to the beginning of PATH).</string>
    <string name="title_home_path_preference">HOME folder</string>
    <string name="summary_home_path_preference">Path to a writable folder to be used as HOME.</string>
    <string name="edit_text"        >Edit text</string>
    <string name="select_text"      >Select text</string>
    <string name="copy_all"         >Copy all</string>
    <string name="paste"            >Paste</string>
    <string name="send_control_key" >Send control key</string>
    <string name="send_fn_key"      >Send fn key</string>
    <string name="perm_run_script">Run arbitrary commands in Terminal Emulator</string>
    <string name="permdesc_run_script">Allows application to open new windows in Terminal Emulator for Android and run commands in those windows with all of Terminal Emulator for Android\'s permissions, including access to the Internet and your SD Card.</string>
    <string name="perm_append_to_path">Add commands to Terminal Emulator</string>
    <string name="permdesc_append_to_path">Allows application to provide additional commands (add directories to the PATH) for Terminal Emulator for Android.</string>
    <string name="perm_prepend_to_path">Override commands in Terminal Emulator</string>
    <string name="permdesc_prepend_to_path">Allows application to override existing commands with its own versions (prepend directories to the PATH) in Terminal Emulator for Android.</string>
    <string name="activity_term_here_title">Term here</string>
    <string name="fsnavigator_title">FILE SELECTOR</string>
    <string name="fsnavigator_no_external_storage">External storage not available</string>
    <string name="fsnavigator_optional_enter_path">Or enter path here.</string>
    <string name="fsnavigator_change_theme">Change theme</string>
    <string name="addshortcut_command_hint">command</string>
    <string name="addshortcut_example_hint">--example=\""a\"</string>
    <string name="addshortcut_button_find_command">Find command</string>
    <string name="addshortcut_navigator_title">SELECT SHORTCUT TARGET</string>
    <string name="addshortcut_command_window_instructions">Command window requires full path, no arguments. For other commands use Arguments window (ex: cd /sdcard).</string>
    <string name="addshortcut_arguments_label">Arguments\:</string>
    <string name="addshortcut_shortcut_label">Shortcut label\:</string>
    <string name="addshortcut_button_text_icon">Text icon</string>
    <string name="addshortcut_make_text_icon">MAKE TEXT ICON</string>
    <string name="addshortcut_text_icon_instructions"></string>
    <string name="addshortcut_title">TTerm shortcut</string>
    <string name="colorvalue_letter_alpha">α</string>
    <string name="colorvalue_letter_red">R</string>
    <string name="colorvalue_letter_green">G</string>
    <string name="colorvalue_letter_blue">B</string>
    <string name="colorvalue_label_lock_button_column">LOCK</string>
    <string name="colorvalue_icon_text_entry_hint">Enter icon text</string>
</resources>